--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Consultar.cshtml
@@ -97,6 +97,9 @@
     @Html.HiddenFor(q => q.IdCbteVta, new { @id = "IdCbteVta" })
     @Html.HiddenFor(q => q.IdPuntoVta, new { @id = "IdPuntoVta" })
     @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     if (ViewBag.mensaje != null)
     {
         <div class="row">
@@ -129,46 +132,46 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-offset-6 col-md-1">
-                @if (@ViewBag.Nuevo == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "Factura", new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa }, null)">
                             <i class="fa fa-plus"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
             <div class="col-md-1">
-                @if (@ViewBag.Modificar == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "Factura", new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal,IdBodega=Model.IdBodega, IdCbteVta=Model.IdCbteVta }, null)">
                             <i class="fa fa-edit"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
             <div class="col-md-1">
-                @if (@ViewBag.Anular == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "Factura", new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdBodega = Model.IdBodega, IdCbteVta = Model.IdCbteVta }, null)">
                             <i class="fa fa-remove"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
             <div class="col-md-1">
-                <button type="button" class="btn btn-primary form-control" id="ride" onclick="ImprimirRIDE();" title="Imprimir">
-                    <i class="fa fa-print"></i>  RIDE
-                </button>
+                <div id="ride" hidden>
+                    <button type="button" class="btn btn-primary form-control" onclick="ImprimirRIDE();" title="Imprimir">
+                        <i class="fa fa-print"></i>  RIDE
+                    </button>
+                </div>
             </div>
             <div class="col-md-1">
-                <button type="button" class="btn btn-primary form-control" id="sri" onclick="AutorizarSRI();" title="Autorizar SRI">
-                    <i class="fa fa-send"></i>  SRI
-                </button>
+                <div id="sri" hidden>
+                    <button type="button" class="btn btn-primary form-control" onclick="AutorizarSRI();" title="Autorizar SRI">
+                        <i class="fa fa-send"></i>  SRI
+                    </button>
+                </div>
             </div>
-
             <div class="col-md-1">
                 <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
                     <i class="fa fa-print"></i>
@@ -587,6 +590,7 @@
         ValidarCliente();
         Set_NivelDescuento_x_FormaPago();
         MostrarBotonesSRI();
+        MostrarBotonesAccion();
 
         $("#vt_tipo_venta").change(function () {
             get_info_termino_pago();
@@ -614,7 +618,23 @@
             CalcularCambio();
         });
     });
-        function BuscarProducto(Secuencia) {
+    
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
+    }
+
+    function BuscarProducto(Secuencia) {
         $("#Secuencia").text(Secuencia);
         var datos = {
             IdSucursal: $("#IdSucursal").val(),
