--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaTipo/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/FacturaTipo/Consultar.cshtml
@@ -14,7 +14,9 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdFacturaTipo, new { @id = "IdFacturaTipo" })
-
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
     if (ViewBag.mensaje != null)
     {
         <div class="row">
@@ -48,34 +50,31 @@
     <div class="row">
          <div class="col-md-12">
              <div class="col-md-offset-9 col-md-1">
-                 @if (Model.Nuevo == 1)
-                 {
-                     <div class="form-group">
+                 <div class="form-group">
+                     <div id="btnNuevo" hidden>
                          <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "FacturaTipo", new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa }, null)">
                              <i class="fa fa-plus"></i>
                          </a>
                      </div>
-                 }
+                 </div>
              </div>
              <div class="col-md-1">
-                 @if (Model.Modificar == 1)
-                 {
-                     <div class="form-group">
+                 <div class="form-group">
+                     <div id="btnModificar" hidden>
                          <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "FacturaTipo", new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa, IdFacturaTipo = Model.IdFacturaTipo }, null)">
                              <i class="fa fa-edit"></i>
                          </a>
                      </div>
-                 }
+                 </div>
              </div>
              <div class="col-md-1">
-                 @if (Model.Anular == 1)
-                 {
-                     <div class="form-group">
+                 <div class="form-group">
+                     <div id="btnAnular" hidden>
                          <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "FacturaTipo", new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa, IdFacturaTipo = Model.IdFacturaTipo }, null)">
                              <i class="fa fa-remove"></i>
                          </a>
                      </div>
-                 }
+                 </div>
              </div>
          </div>
     </div>
@@ -105,3 +104,24 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+
+<script type="text/javascript">
+    $(function () {
+        MostrarBotonesAccion();
+    });
+
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1)
+        {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1)
+        {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1)
+        {
+            $("#btnAnular").show();
+        }
+    }
+</script>
