--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Consultar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Consultar.cshtml
@@ -13,6 +13,10 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdPuntoVta)
+    @Html.HiddenFor(q => q.Nuevo, new { @id = "Nuevo" })
+    @Html.HiddenFor(q => q.Modificar, new { @id = "Modificar" })
+    @Html.HiddenFor(q => q.Anular, new { @id = "Anular" })
+
     if (ViewBag.MensajeSuccess != null)
     {
         <div class="alert alert-success alert-dismissible">
@@ -25,34 +29,31 @@
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-offset-9 col-md-1">
-                @if (@ViewBag.Nuevo == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnNuevo" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Nuevo" href="@Url.Action("Nuevo", "PuntoVenta", new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa }, null)">
                             <i class="fa fa-plus"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
             <div class="col-md-1">
-                @if (@ViewBag.Modificar == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnModificar" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Modificar" href="@Url.Action("Modificar", "PuntoVenta", new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdPuntoVta = Model.IdPuntoVta }, null)">
                             <i class="fa fa-edit"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
             <div class="col-md-1">
-                @if (@ViewBag.Anular == true)
-                {
-                    <div class="form-group">
+                <div class="form-group">
+                    <div id="btnAnular" hidden>
                         <a type="button" class="btn btn-primary form-control" title="Anular" href="@Url.Action("Anular", "PuntoVenta", new { Area = "Facturacion", IdEmpresa = Model.IdEmpresa, IdSucursal = Model.IdSucursal, IdPuntoVta = Model.IdPuntoVta }, null)">
                             <i class="fa fa-remove"></i>
                         </a>
                     </div>
-                }
+                </div>
             </div>
         </div>
     </div>
@@ -163,11 +164,24 @@
 <script>
     $(function () {
         cargar_bodega();
+        MostrarBotonesAccion();
     });
 
     $("#IdSucursal").change(function () {
         cargar_bodega();
     });
+
+    function MostrarBotonesAccion() {
+        if ($("#Nuevo").val() == 1) {
+            $("#btnNuevo").show();
+        }
+        if ($("#Modificar").val() == 1) {
+            $("#btnModificar").show();
+        }
+        if ($("#Anular").val() == 1) {
+            $("#btnAnular").show();
+        }
+    }
 
     function cargar_bodega() {
         $("#IdBodega").empty();
