--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Vendedor/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Facturacion.fa_Vendedor_Info
 @{
-    ViewBag.Title = "consulta de vendedores";
+    ViewBag.Title = "Consulta de vendedores";
     if (string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdUsuario) || string.IsNullOrEmpty(Core.Erp.Web.Helps.SessionFixed.IdEmpresa))
     {
         Response.Redirect("~/Account/Login");
